--- a/web/styles.css
+++ b/web/styles.css
@@ -131,3 +131,7 @@ button,input {
     border:0;}
 
 #root {width: 100%; height: 100%; padding: 0; margin:0;}
+
+button {transition: all 0.15s ease}
+button:hover,
+button:active  {opacity:0.8; transition: all 0.15s ease}
